2009-01-07  Esteban Sanchez  <estebans@artica.es>

	* include/functions_ui.php: Added to repository. Functions that prints
	UI elements for Pandora. Let's make functions_html.php a single HTML
	library instead of mixing it up with Pandora specific elements.

	* include/functions.php: Fixed inline doc. Added functions_ui.php.

	* include/functions_html.php: Functions moved to functions_ui.php.
	Fixed checkbox ids in print_checkbox_extended().

	* general/main_menu.php: Make refr attribute optional. Do not print
	class attribut tag if no class was given.

	* general/login_page.php: Show login error message if login fails.
	Put POST values into the form instead of the URL.

	* index.php: Cleaned up login code to become easier.

2009-01-06  Raul Mateos  <raulofpandora@gmail.com>

	* index.php: Updated build.
	
	* general/footer.php: Fixed small issue, thanks to Jure Pečar for
	reporting.

2009-01-05  Evi Vanoost <vanooste@rcbi.rochester.edu>
	
	* godmode/agentes/alert_manager_editor.php, 
	godmode/snmpconsole/snmp_alert.php, include/functions_reporting.php,
	include/functions_reporting.php:
	Function updates
	
	* include/functions.php: show_alert_show_view is now format_alert_row
	
	* include/functions_db.php: get_simple_alerts_in_agent is now 
	get_agent_alerts_simple; get_combined_alerts_in_agent is now 
	get_agent_alerts_combined; get_alerts_in_agent is now get_agent_alerts;
	dame_nombre_alerta is now get_alert_type; get_alerts_in_group is now
	get_group_alerts; dame_id_grupo set to deprecated; Added 
	process_alerts_validate to validate alerts passed to it.
	
	* index.php: Set UTF-8 encoding standard for multibyte functions
	
	* operation/agentes/estado_alertas.php: Rewritten
	
	* operation/agentes/ver_agente.php: Put alert validation in a function

2009-01-05  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template.
